# quadrants

./: .buildinfo  .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  Dockerfile.rocm  MANIFEST.in  README.md  build.py  diff-cover.html  download_llvm.py  env.sh  genindex.html  gstaichi-releases.md  index.html  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  search.html  searchindex.js  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  document.md  question.md
.github/workflows/: api_doc.yml  benchmark_alarm.yml  benchmarks.yml  check_deleted_comments.yml  check_doc_ordering.yml  check_doc_quality.yml  check_feature_factorization.yml  check_non_ascii.yml  check_test_coverage.yml  check_wrapping.yml  clang_tidy_amdgpu.yml  debug_cuda_max_reducer.yml  linters.yml  linux.yml  macosx.yml  metal-native-float-atomic.yml  pr_change_report.yml  pyright_linter.yml  test_gpu.yml
_modules/: index.html
_modules/quadrants/: experimental.html  pytest_plugin.html
_sources/user_guide/: algorithms.md.txt  atomics.md.txt  block.md.txt  contributing.md.txt  cuda_graph.md.txt  fastcache.md.txt  grid.md.txt  index.md.txt  init_options.md.txt  optimization_passes.md.txt  perf_dispatch.md.txt  supported_systems.md.txt  tensor.md.txt  (+3 more)
autoapi/: index.html
benchmarks/: bit_cast_scratch.py  run.py
cmake/: AutoDownloadLLVM.cmake  Distributed.cmake  PythonNanobind.cmake  PythonNumpyPybind11.cmake  QuadrantsCXXFlags.cmake  QuadrantsConfig.cmake.in  QuadrantsCore.cmake  QuadrantsTests.cmake
duburcqa-patch-2/: genindex.html  objects.inv  search.html
misc/: benchmark_bit_struct_stores.py  benchmark_bls.py  benchmark_compile.py  benchmark_parallel_compilation.py  benchmark_reduction.py  benchmark_reduction_tmps.py  benchmark_scatter_bls.py  benchmark_tensor_access.py  ci_create_pr_card.py  copyright.py  demo_constant_fold.py  demo_launch_overhead.py  demo_listgen.py  demo_oob_ub.py  demo_trackback.py  format_server.py  generate_c_api.py  generate_c_api_docs.py  generate_ir_design_doc.py  idle_hello.py  make_changelog.py  minimal_timed.py  prtags.json  quadrants_json.py  spMv_linear_solve.py  sparse_matrix.py  test_async_weaken_access.py  test_gpu_async.py  test_memory_pool.py  test_poly_timed.py  test_without_init.py
python/: .gitignore
quadrants/codegen/llvm/: CMakeLists.txt  codegen_llvm.cpp  codegen_llvm.h  codegen_llvm_checkpoint.cpp  codegen_llvm_quant.cpp  compiled_kernel_data.cpp  compiled_kernel_data.h  kernel_compiler.cpp  kernel_compiler.h  llvm_codegen_utils.cpp  llvm_codegen_utils.h  llvm_compiled_data.h  struct_llvm.cpp  struct_llvm.h
quadrants/rhi/: CMakeLists.txt  arch.cpp  arch.h  device.cpp  device.h  device_capability.cpp  device_capability.h  impl_support.h  public_device.h
quadrants/rhi/amdgpu/: CMakeLists.txt  amdgpu_context.cpp  amdgpu_context.h  amdgpu_device.cpp  amdgpu_device.h  amdgpu_driver.cpp  amdgpu_driver.h  amdgpu_driver_functions.inc.h  amdgpu_profiler.cpp  amdgpu_profiler.h  amdgpu_stream_pin.h
quadrants/rhi/common/: CMakeLists.txt  host_memory_pool.cpp  host_memory_pool.h  unified_allocator.cpp  unified_allocator.h
quadrants/rhi/cpu/: CMakeLists.txt  cpu_device.cpp  cpu_device.h
quadrants/rhi/cuda/: CMakeLists.txt  cublas_functions.inc.h  cuda_context.cpp  cuda_context.h  cuda_device.cpp  cuda_device.h  cuda_driver.cpp  cuda_driver.h  cuda_driver_functions.inc.h  cuda_profiler.cpp  cuda_profiler.h  cuda_stream_pin.h  cuda_types.h  cupti_toolkit.cpp  cupti_toolkit.h
quadrants/rhi/interop/: CMakeLists.txt  vulkan_cpu_interop.cpp  vulkan_cpu_interop.h  vulkan_cuda_interop.cpp  vulkan_cuda_interop.h
quadrants/rhi/llvm/: CMakeLists.txt  allocator.cpp  allocator.h  device_memory_pool.cpp  device_memory_pool.h  llvm_device.h
quadrants/rhi/metal/: CMakeLists.txt  metal_api.cpp  metal_api.h  metal_device.h  metal_device.mm  metal_rhi_enum_mappings.h
quadrants/rhi/vulkan/: CMakeLists.txt  vulkan_api.cpp  vulkan_api.h  vulkan_common.h  vulkan_device.cpp  vulkan_device.h  vulkan_device_creator.cpp  vulkan_device_creator.h  vulkan_loader.cpp  vulkan_loader.h  vulkan_utils.h
quadrants/runtime/gfx/: CMakeLists.txt  adstack_bound_reducer_launch.cpp  adstack_max_reducer_launch.cpp  adstack_sizer_launch.cpp  checkpoint_launch.cpp  kernel_launcher.cpp  kernel_launcher.h  runtime.cpp  runtime.h  snode_tree_manager.cpp  snode_tree_manager.h
quadrants/runtime/llvm/runtime_module/: CMakeLists.txt  adstack_runtime.cpp  adstack_runtime.h  atomic.h  cuda_runtime.cu  internal_functions.h  llvm_runtime.h  locked_task.h  node_dynamic.h  node_pointer.h  runtime.cpp
quadrants/util/: CMakeLists.txt  base64.h  bit.cpp  bit.h  environ_config.h  file_sequence_writer.cpp  file_sequence_writer.h  hash.h  io.h  lang_util.cpp  lang_util.h  line_appender.h  lock.h  meta.h  offline_cache.cpp  offline_cache.h  short_name.cpp  short_name.h  str.cpp  str.h  testing.cpp  testing.h  zip.cpp
scripts/: _fatbin_common.py  build_checkpoint_gate_fatbin.py  build_checkpoint_yield_check_fatbin.py  build_checkpoint_yield_check_hsaco.py  build_condition_kernel_fatbin.py  build_condition_kernel_fatbin.sh  run_clang_tidy.py
tests/: coverage_report.py  pytest.ini  pytest_hardtle.py  run_tests.py  test_utils.py
tools/: gen_stubs.py
user_guide/: algorithms.html  atomics.html  autodiff.html  block.html  buffer_view.html  building_cudagraph_conditional_fatbin.html  compound_types.html  contributing.html  cuda_graph.html  debug.html  decompositions.html  fastcache.html  getting_started.html  gpu_graph.html  graph.html  grid.html  index.html  init_options.html  interop.html  kernel_coverage.html  linalg_per_thread.html  math.html  matrix_vector.html  matrix_vector_per_thread.html  metal_shared_queue.html  optimization_passes.html  parallelization.html  perf_dispatch.html  performance.html  python_backend.html  quirks.html  scalar_tensors.html  static.html  streams.html  sub_functions.html  subgroup.html  supported_systems.html  tensor.html  tensor_types.html  tile.html  (+4 more)
zhouxian-patch-1/: .buildinfo  index.html  py-modindex.html
(+9516 files in other folders)
