[project]
name = "quadrants"
description = "The Quadrants Programming Language"
maintainers = [{name = "Quadrants developers"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Compilers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Games/Entertainment :: Simulation",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
keywords = ["graphics", "simulation"]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=1.26.0",
    "colorama",
    "dill",
    "pydantic>=2.0.0",  # rewrite of 1.10 from scratch
    "rich>=1.0.0",  # first non-beta version; 2020
    "setuptools>=77.0.0",  # Gives project.license-files
    "cffi>=1.16.0",
]

[tool.setuptools_scm]
write_to = "python/quadrants/_version.py"
write_to_template = "__version__ = '{version}'\n"

[dependency-groups]
docs = [
    "sphinx",
    "sphinx-copybutton",
    "myst_parser",
    "sphinx-subfigure",
    "sphinxcontrib-video",
    "sphinx-togglebutton",
    "sphinx-design",
    "pydata-sphinx-theme",
    "sphinx-autoapi",
    "astroid<4.0.0",  # upgrade to 4.0.0 on oct 5 2025 broke the build
]
dev = [
    "cmake<4.0.0",
    "colorama",
    "coverage",
    "Pillow",
    # pybind11 >=3.0 has a faster Python<->C++ call dispatch (~8% on call-overhead-bound CPU benchmarks). This
    # dev/test group provides the pybind11 that gets compiled into the wheel for --no-build-isolation builds (the
    # production/CI path), so it must stay in sync with [build-system].requires below. Stub generation works with
    # current pybind11-stubgen (>=2.5, which supports the 3.x ABI).
    "pybind11>=3.0.0,<4.0.0",
    "pybind11-stubgen",
    "pydantic",
    "GitPython",
    "yapf",
    "distro",
    "isort",
    "pylint",
    "pyright",
    "requests",
    "twine",
    "wheel",
    "astunparse",
    "pre-commit",
    "scikit-build-core>=0.10",  # build backend (was scikit-build classic)
    "build",                    # `python -m build` / pip wheel frontend
    "setuptools_scm>=6.0",
    "numpy>=2.0.0",
    "ninja; platform_system != 'Windows'",
    "ruamel.yaml",
]
test = [
    "Pillow",
    "pytest",
    # 16.0 upgrade broke xfail, caused fatal errors, see
    # https://github.com/Genesis-Embodied-AI/quadrants/pull/162
    "pytest-rerunfailures<16.0",
    "pytest-cov",
    "pytest-retry",
    "pytest-xdist>=3.7.0",

    "numpy>=2.0.0",  # otherwise, on windows, tries to install 1.26.4, which has no wheel for python 3.13
    "psutil",
    "autograd",
    "requests",
    "cffi",
    "scipy",
    "setproctitle",
    "nbmake",
    "marko",
    "PyYAML",
    "pyevtk",
    "pyright",
]

[project.entry-points.pytest11]
quadrants = "quadrants.pytest_plugin"

[project.urls]
Homepage = "https://github.com/Genesis-Embodied-AI/quadrants"

[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=3.0.0,<4.0.0",  # pybind11 bindings (headers + CMake config); 3.0.x = faster Python<->C++ call dispatch
    "pybind11-stubgen",    # consumed by the CMake stub-generation install hook
    "numpy>=2.0.0",        # NumPy headers for the extension
    "setuptools_scm>=6.0", # version from git tags (metadata provider below)
    "ruamel.yaml",         # stub_replacements_*.yaml post-processing in tools/gen_stubs.py
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Track the scikit-build-core pin in [build-system].requires so default behaviours
# stay stable as scikit-build-core evolves.
minimum-version = "build-system.requires"
# Persistent build dir keyed by wheel tag -> fast incremental rebuilds (esp. editable).
build-dir = "build/{wheel_tag}"
# Pure-Python sources live under python/quadrants; the final path element (quadrants)
# is the importable package. The compiled core, runtime .bc and assets are added by
# CMake install() rules under the same quadrants/ tree, so wheel + editable co-locate.
wheel.packages = ["python/quadrants"]
# redirect editable: compiled artifacts installed to site-packages, Python served live
# from the source tree.
editable.mode = "redirect"
# Version comes from git via setuptools_scm; exposed to CMake as SKBUILD_PROJECT_VERSION.
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/quadrants/_version.py"]
# Drop dependency/build dev artifacts the classic manifest filter also excluded:
# SPIRV-Tools dev headers + CMake configs install to the prefix root (include/, lib/),
# the assets submodule's .git pointer, and the SPIRV-Tools shared lib (blacklisted).
wheel.exclude = [
    "include/**",
    "lib/**",
    "share/**",
    "bin/**",
    "quadrants/assets/.git",
    "quadrants/assets/.git/**",
    "quadrants/**/*.md",  # in-package dev docs (e.g. lang/README.md); not runtime data
    "**/libSPIRV-Tools-shared*",
]

[tool.coverage.paths]
source = [
    "python/quadrants",
    "*/site-packages/quadrants",
]

[tool.coverage.report]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Calling non-taichi function",
    "ignore:`np.int` is a deprecated alias",
    "ignore:Operator \"is\" in Taichi scope is deprecated",
    "ignore:Operator \"is not\" in Taichi scope is deprecated"
]

[tool.yapf]
based_on_style = "pep8"
blank_line_before_nested_class_or_def = false

[tool.ruff]
exclude = [
    "external/**/*",
]

[tool.ruff.lint]
select = ["I", "F401"]  # Enable import ordering checks, and unused import checks

[tool.ruff.lint.isort]
known-local-folder = ["tests", ".github"]
known-first-party = ["quadrants"]
known-third-party = ["pytest"]
